// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Posts />  snapshots shows error screen for service status error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Oops, I did it again.
  </Text>
</View>
`;

exports[`<Posts />  snapshots shows loading screen while service status is still loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`<Posts />  snapshots shows post list screen when results have loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;
